--- a/app/styles/feedback.scss
+++ b/app/styles/feedback.scss
@@ -81,6 +81,7 @@
     font-size: 12px;
     padding-top: 3px;
     font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color:#474747
 }
 .follow-up-right .btn {
     padding: 3px 8px;
